Closes #78-add-new-parameter-to-sessions-search-host
