# src/main/kotlin/pt/isel/ls/api/SessionsAPI.kt
@@ -30,7 +30,8 @@ class SessionsAPI(private val services: SessionServices) : APISchema() {
             }
             val state = request.query("state")?.toBoolean()
             val playerEmail = request.query("player")?.let { Email(it) }
-            val sessionSearch = SessionSearch(gameId, date, state, playerEmail)
+            val hostId = request.query("host")?.toIntOrNull()
+            val sessionSearch = SessionSearch(gameId, date, state, playerEmail, hostId)
             val skip = request.query("skip")?.toInt().validateInt(DEFAULT_SKIP) { it.isNotNegative() }
             val limit = request.query("limit")?.toInt().validateInt(DEFAULT_LIMIT) { it.isNotNegative() }
             Response(Status.OK)
